--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -209,7 +209,7 @@ jobs:
                               --in coverage
                               --report-on lib
                               --lcov
-                              -out coverage/lcov.info'
+                              --out coverage/lcov.info'
       - name: Upload Coverage to coveralls.io
         uses: coverallsapp/github-action@v1.1.2
         with:
