--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ repository: https://github.com/just95/toml.dart
 environment:
   sdk: '>=2.12.0 <3.0.0'
 dependencies:
+  meta: ^1.3.0
   petitparser: ^4.0.2
   quiver: ^3.0.0
 dev_dependencies:
