--- a/example/toml_encoder/analysis_options.yaml
+++ b/example/toml_encoder/analysis_options.yaml
@@ -1,9 +1,1 @@
-include: package:pedantic/analysis_options.1.11.0.yaml
-
-analyzer:
-  strong-mode:
-    implicit-casts: false
-
-linter:
-  rules:
-    - directives_ordering
+include: ../../analysis_options.yaml
