--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
 dev_dependencies:
   # Dependencies for `webdev`.
   # See also https://dart.dev/tools/webdev#depending-on-build_-packages.
-  build_runner: any
-  build_web_compilers: any
+  build_runner: ^1.11.0
+  build_web_compilers: ^2.12.0
   # Dependencies for `dartanalyzer`.
   pedantic: ^1.11.0
   # Dependencies for continuous integration.
   webdriver: ^3.0.0
-  http_server: any
+  http_server: ^1.0.0
