--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -16,4 +16,5 @@ dev_dependencies:
   pedantic: ^1.11.0
   # Dependencies for continuous integration.
   webdriver: ^3.0.0
-  http_server: ^1.0.0
+  shelf: ^1.1.1
+  shelf_static: ^1.0.0
