--- a/.github/workflows/check-dependencies.yaml
+++ b/.github/workflows/check-dependencies.yaml
@@ -25,7 +25,7 @@ jobs:
   # This job runs the `dart pub outdated` command and uploads the JSON output
   # as an artifact.
   find-outdated-packages:
-    name: Check Dependencies
+    name: Find Outdated Packages
     runs-on: ubuntu-latest
     container:
       image: google/dart:latest
@@ -46,8 +46,10 @@ jobs:
   # command. The `packages` property must be an empty array. Otherwise,
   # this job fails.
   check-outdated-packages:
-    name: Check Dependencies
+    name: Check Outdated Packages
     runs-on: ubuntu-latest
+    needs:
+      - find-outdated-packages
     steps:
       - name: Checkout
         uses: actions/checkout@v2
