--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -4,9 +4,10 @@
 name: Example CI
 
 # Trigger the workflow whenever commits are pushed to the `main` branch or
-# development braches with the `-ci` postfix. The workflow also runs when
-# files outside of the `example` directory change because the examples depend
-# on the `toml` package.
+# development braches with the `-ci` postfix.
+# The workflow also runs when it is modified itself or source files outside of
+# the `example` directory change because the examples depend on the `toml`
+# package. However, source files of the `toml` package for tests can be ignored.
 #
 # Additionally, the workflow runs once every day at 6am on the `main` branch.
 on:
@@ -14,6 +15,12 @@ on:
     branches:
       - 'main'
       - '*-ci'
+    paths:
+      - '.github/workflows/example.yaml'
+      - 'lib/**'
+      - 'tool/*example*.sh'
+      - 'example/**'
+      - '*.yaml'
   schedule:
       - cron: "0 6 * * *"
 
