--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -13,7 +13,7 @@ dev_dependencies:
   build_runner: ^1.11.0
   build_web_compilers: ^2.13.0
   # Dependencies for `dartanalyzer`.
-  pedantic: ^1.11.0
+  lints: ^1.0.0
   # Dependencies for continuous integration.
   webdriver: ^3.0.0
   shelf: ^1.1.1
