--- a/example/toml_to_json/pubspec.yaml
+++ b/example/toml_to_json/pubspec.yaml
@@ -8,6 +8,6 @@ dependencies:
   toml:
     path: ../../
 dev_dependencies:
-  pedantic: ^1.11.0
+  lints: ^1.0.0
 executables:
   toml-to-json: toml_to_json
