--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -112,6 +112,10 @@ jobs:
   build-and-push-toml-to-json-docker-image:
     name: Build and Push `toml_to_json` Docker Image
     runs-on: ubuntu-latest
+    needs:
+      - analyze-examples
+      - format-examples
+      - test-examples
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -125,3 +129,4 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/toml-to-json:latest
+          file: example/toml_to_json/Dockerfile
