Remove dependency on `package:quiver` in favor of `package:collection`
Since Dart 2.14 there are the methods `Object.hash` and `Object.hashAll`.
Thus the corresponding functions from `package:quiver` are no longer
needed. Quiver was also used for list comparision. This functionality
is now taken by `package:collection`. The `BiMap` has been replaced
by a regular map and the inver mapping is created explicitly.

Since `package:collection` provides an `whereNotNull` extension,
our extension could be removed.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,11 @@ version: 0.12.0
 description: Parser and encoder for TOML v1.0.0 (Tom's Obvious, Minimal Language) configuration files.
 repository: https://github.com/just95/toml.dart
 environment:
-  sdk: '>=2.13.0 <3.0.0'
+  sdk: '>=2.14.0 <3.0.0'
 dependencies:
   meta: ^1.7.0
   petitparser: ^4.2.0
-  quiver: ^3.0.1
+  collection: ^1.15.0
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.17.12
