Use new `.dart_tool/package_config.json` file in CI pipeline
The `.packages` file is deprecated and cannot be used by
`format_coverage` anymore.

See also <https://dart.dev/go/dot-packages-deprecation>.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -210,7 +210,7 @@ jobs:
       - name: Install coverage Package
         run: dart pub global activate coverage
       - name: Format Coverage
-        run: 'format_coverage --packages=.packages
+        run: 'format_coverage --packages=.dart_tool/package_config.json
                               --in coverage
                               --report-on lib
                               --lcov
