--- a/.github/workflows/check-dependencies.yaml
+++ b/.github/workflows/check-dependencies.yaml
@@ -28,7 +28,7 @@ jobs:
     name: Find Outdated Packages
     runs-on: ubuntu-latest
     container:
-      image: google/dart:latest
+      image: dart:stable
     steps:
       - name: Checkout
         uses: actions/checkout@v2
