--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -32,7 +32,7 @@ jobs:
     name: Analyze Code of Examples
     runs-on: ubuntu-latest
     container:
-      image: google/dart:latest
+      image: dart:stable
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -50,7 +50,7 @@ jobs:
     name: Check Code Formatting of Examples
     runs-on: ubuntu-latest
     container:
-      image: google/dart:latest
+      image: dart:stable
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -68,7 +68,7 @@ jobs:
     name: Test Examples
     runs-on: ubuntu-latest
     container:
-      image: google/dart:latest
+      image: dart:stable
     steps:
       - name: Checkout
         uses: actions/checkout@v2
