--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,7 +76,7 @@ jobs:
       image: dart:${{ matrix.dart-version }}
     strategy:
       matrix:
-        dart-version: ['2.16', '2.17', latest]
+        dart-version: ['2.17', latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
