--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -104,7 +104,7 @@ jobs:
       image: dart:stable
     strategy:
       matrix:
-        node-version: [10, 12, 14, 15]
+        node-version: [16]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -112,6 +112,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Print node.js Version
+        run: node --version
       - name: Print Dart SDK Version
         run: dart --version
       - name: Install Dependencies
