--- a/example/toml_encoder/pubspec.yaml
+++ b/example/toml_encoder/pubspec.yaml
@@ -1,11 +1,11 @@
 name: example
-description: An example that demonstrates how encode a TOML document.
+description: An example that demonstrates how to encode a TOML document.
 repository: https://github.com/just95/toml.dart/tree/main/example/toml_parser
 publish_to: none
 environment:
-  sdk: '>=2.13.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies:
   toml:
     path: ../../
 dev_dependencies:
-  lints: ^1.0.0
+  lints: ^2.0.0
