--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -78,6 +78,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Dart SDK
         uses: dart-lang/setup-dart@v0.4
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
       - name: Print Dart SDK Version
         run: dart --version
       - name: Install Dependencies of Examples
