--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,7 @@ analyzer:
   exclude:
     # Examples are excluded from analysis since they have their own analysis
     # options files.
-    - 'example/**'
+    - "example/**"
   strong-mode:
     implicit-casts: false
 
