--- a/example/toml_to_json/pubspec.yaml
+++ b/example/toml_to_json/pubspec.yaml
@@ -3,7 +3,7 @@ description: An example application for the conversion of TOML documents to JSON
 repository: https://github.com/just95/toml.dart/tree/main/example/toml_to_json
 publish_to: none
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
 dependencies:
   toml:
     path: ../../
