Enable coverage collection in chrome

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -131,9 +131,6 @@ jobs:
           path: coverage/
 
   # Runs the unit tests of the package with `dart test` in Chrome.
-  #
-  # The collection of test coverage information had to be disabled in Chrome
-  # since `dart test` does not terminate otherwise at the moment.
   chrome-test:
     name: Run Unit Tests in Chrome
     runs-on: ubuntu-latest
@@ -151,8 +148,8 @@ jobs:
         with:
           run:
             "dart test --reporter expanded
-            --platform chrome"
-            # --coverage=./coverage/chrome
+            --platform chrome
+            --coverage=./coverage/chrome"
       - name: Upload Test Coverage
         uses: actions/upload-artifact@v3
         with:
@@ -167,7 +164,6 @@ jobs:
     needs:
       - vm-test
       - js-test
-      - firefox-test
       - chrome-test
     steps:
       - name: Checkout
