Upgrade `http_config_loader` example dependencies

--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -10,11 +10,12 @@ dependencies:
 dev_dependencies:
   # Dependencies for `webdev`.
   # See also https://dart.dev/tools/webdev#depending-on-build_-packages.
-  build_runner: ^1.11.0
-  build_web_compilers: ^2.13.0
+  build_runner: ^2.3.3
+  build_web_compilers: ^3.2.7
   # Dependencies for `dartanalyzer`.
   lints: ^2.0.0
+  analyzer: any
   # Dependencies for continuous integration.
-  webdriver: ^3.0.0
-  shelf: ^1.1.1
-  shelf_static: ^1.0.0
+  webdriver: ^3.0.2
+  shelf: ^1.4.0
+  shelf_static: ^1.1.1
