Update `coverallsapp/github-action` options from v1 to v2
The option `path-to-lcov` is now deprecated.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -191,7 +191,7 @@ jobs:
         uses: coverallsapp/github-action@v2.1.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage/lcov.info
+          file: coverage/lcov.info
 
   # Generates the API documentation from doc comments.
   build-docs:
