--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,7 +93,7 @@ jobs:
       - name: Upload Test Coverage
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-vm-test-${ matrix.dart-version }
           path: coverage/
 
   # Runs the unit tests of the package with `dart test` in Node.js.
@@ -127,7 +127,7 @@ jobs:
       - name: Upload Test Coverage
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-js-test-${ matrix.node-version }
           path: coverage/
 
   # Runs the unit tests of the package with `dart test` in Chrome.
@@ -150,7 +150,7 @@ jobs:
       - name: Upload Test Coverage
         uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-chrome-test
           path: coverage/
 
   # Combines the test coverage information of all other jobs into a `lcov.info`
@@ -168,8 +168,9 @@ jobs:
       - name: Download Coverage
         uses: actions/download-artifact@v4
         with:
-          name: coverage
+          pattern: coverage-*
           path: coverage/
+          merge-multiple: true
       - name: Use Dart SDK
         uses: dart-lang/setup-dart@v1.4
       - name: Print Dart SDK Version
