Temporarily disable deprectaion warnigs
The `--resources-dir` command line argument of `dartdoc` is deprecated
but `dart doc` always passes the option.

--- a/dartdoc_options.yaml
+++ b/dartdoc_options.yaml
@@ -14,7 +14,7 @@ dartdoc:
     - ambiguous-reexport
     - broken-link
     - category-order-gives-missing-package-name
-    - deprecated
+    # - deprecated
     - ignored-canonical-for
     - missing-from-search-index
     - no-canonical-found
