--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,9 @@ repository: https://github.com/just95/toml.dart
 environment:
   sdk: ">=3.2.0 <4.0.0"
 dependencies:
-  meta: ^1.7.0
+  meta: ^1.12.0
   petitparser: ^6.0.2
   collection: ^1.16.0
 dev_dependencies:
-  lints: ">=3.0.0 <5.0.0"
-  test: ^1.21.6
+  lints: ^4.0.0
+  test: ^1.25.7
