--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   meta: ^1.12.0
   petitparser: ^6.0.2
   collection: ^1.16.0
+  web: ^1.1.1
 dev_dependencies:
   lints: ^4.0.0
   test: ^1.25.7
