--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   toml:
     path: ../../
+  web: ^1.1.1
 dev_dependencies:
   # Dependencies for `webdev`.
   # See also https://dart.dev/tools/webdev#depending-on-build_-packages.
