--- a/.github/workflows/check-dependencies.yaml
+++ b/.github/workflows/check-dependencies.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Dependencies
         run: dart pub get
       - name: Find Outdated Packages
-        run: dart pub outdated --json > outdated.json
+        run: dart pub outdated --json | tee outdated.json
       - name: Upload Output of `dart pub outdated`
         uses: actions/upload-artifact@v4
         with:
